--- a/package.json
+++ b/package.json
@@ -11,17 +11,25 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "3": "^2.1.0",
+    "-": "0.0.1",
+    "jquery": "^1.9.1",
+    "knex": "^0.20.15",
+    "sqlite3": "latest",
     "strapi": "3.0.5",
     "strapi-admin": "3.0.5",
-    "strapi-utils": "3.0.5",
-    "strapi-plugin-content-type-builder": "3.0.5",
-    "strapi-plugin-content-manager": "3.0.5",
-    "strapi-plugin-users-permissions": "3.0.5",
-    "strapi-plugin-email": "3.0.5",
-    "strapi-plugin-upload": "3.0.5",
     "strapi-connector-bookshelf": "3.0.5",
-    "knex": "<0.20.0",
-    "sqlite3": "latest"
+    "strapi-connector-mongoose": "^3.0.5",
+    "strapi-plugin-content-manager": "3.0.5",
+    "strapi-plugin-content-type-builder": "3.0.5",
+    "strapi-plugin-documentation": "3.0.5",
+    "strapi-plugin-email": "3.0.5",
+    "strapi-plugin-graphql": "3.0.5",
+    "strapi-plugin-upload": "3.0.5",
+    "strapi-plugin-users-permissions": "3.0.5",
+    "strapi-provider-upload-aws-s3": "^3.0.5",
+    "strapi-provider-upload-firebase": "^0.0.4",
+    "strapi-utils": "3.0.5"
   },
   "author": {
     "name": "A Strapi developer"
