--- a/api/classgroup/models/classgroup.settings.json
+++ b/api/classgroup/models/classgroup.settings.json
@@ -28,8 +28,8 @@
       "model": "school"
     },
     "kid": {
-      "model": "kid",
-      "via": "class"
+      "via": "class",
+      "model": "kid"
     },
     "words": {
       "type": "json"
