feature/findFriends&buyGoods

--- a/api/classgroup/models/classgroup.settings.json
+++ b/api/classgroup/models/classgroup.settings.json
@@ -27,12 +27,11 @@
     "school": {
       "model": "school"
     },
-    "kid": {
-      "via": "class",
-      "model": "kid"
-    },
     "wordList": {
       "type": "json"
+    },
+    "kids": {
+      "collection": "kid"
     }
   }
 }
