--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@google-cloud/storage": "^5.1.1",
     "euclidean-distance": "^1.0.0",
     "firebase-admin": "^8.13.0",
+    "fs": "^0.0.1-security",
     "google-cloud-storage": "^2.0.2",
     "jquery": "^1.9.1",
     "knex": "^0.20.15",
     "natural": "^2.1.5",
+    "pdfkit": "^0.11.0",
     "sqlite3": "latest",
     "strapi": "3.0.5",
     "strapi-admin": "3.0.5",
